# 3-python-package-exercise-threepeat

./: Pipfile  README.md  example.py  pydate_cli.py  pyproject.toml  setup.py
.github/workflows/: workflow.yaml
data/: activities.json  food.json  pickuplines.json
pydate/: __init__.py  activities.py  dessert.py  food.py  pickupline.py
pydate/data/: activities.json  desserts.json  food.json
tests/: test_activities.py  test_dessert.py  test_food.py  test_pickupline.py
