[project]
name = "pydatenyc"
version = "0.1.4"
description = "A CLI tool to recommend date ideas in NYC from activity, to a meal, to dessert based on user preferences, and can even recommend a pick up line for you!"
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
[project.urls]
homepage = "https://github.com/software-students-fall2023/3-python-package-exercise-threepeat"
repository = "https://github.com/software-students-fall2023/3-python-package-exercise-threepeat"
documentation = "https://github.com/software-students-fall2023/3-python-package-exercise-threepeat#readme"

[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"